deploy/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  creationTimestamp: "2022-04-06T13:24:10Z"
  generation: 1
  labels:
    app: news-client
    app.kubernetes.io/instance: news-client
  name: news-client
  namespace: news-client-dev
spec:
  rules:
  - host: news.dev.tools.godeltech.com
    http:
      paths:
      - backend:
          service:
            name: news-client-svc-dev
            port:
              number: 8080
        path: /
        pathType: Prefix
